hphp/hack/test/typecheck/T142820007.php.exp
File "T142820007.php", line 7, characters 23-26:
This type `this` cannot be used in an `extends` clause (Naming[2043])
File "T142820007.php", line 17, characters 3-17:
Invalid assignment (Typing[4110])
  File "T142820007.php", line 14, characters 15-17:
  Expected `int`
  File "T142820007.php", line 16, characters 15-22:
  But got `arraykey`
  File "T142820007.php", line 16, characters 15-22:
  This type argument to `C` must match exactly (it is invariant)
File "T142820007.php", line 18, characters 3-36:
Invalid assignment (Typing[4110])
  File "T142820007.php", line 15, characters 15-20:
  Expected `string`
  File "T142820007.php", line 16, characters 15-22:
  But got `arraykey`
  File "T142820007.php", line 16, characters 15-22:
  This type argument to `C` must match exactly (it is invariant)
